Ran the IntelliJ code cleanup. Mainly small stuff, especially adding back in the "final" keyword, but only for class fields.